--- a/styles/style.css
+++ b/styles/style.css
@@ -757,6 +757,7 @@ p {
     display: flex;
     flex-direction: column;
     place-items: center;
+    overflow-x: hidden;
   }
   main .content-inicio {
     width: 100%;
@@ -938,6 +939,7 @@ p {
     display: flex;
     flex-direction: column;
     place-items: center;
+    overflow-x: hidden;
   }
   main .content-inicio {
     display: flex;
@@ -1111,6 +1113,7 @@ p {
     display: flex;
     flex-direction: column;
     place-items: center;
+    overflow-x: hidden;
   }
   main .content-inicio {
     display: flex;
@@ -1265,6 +1268,7 @@ p {
     display: flex;
     flex-direction: column;
     place-items: center;
+    overflow-x: hidden;
   }
   main .content-inicio {
     display: flex;
@@ -1435,6 +1439,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
   }
   main .content-inicio {
     display: flex;
