--- a/scss/partials/components/_cards.scss
+++ b/scss/partials/components/_cards.scss
@@ -1,11 +1,12 @@
 @use '../utilities/mixins';
 @use '../utilities/extend';
-.contenedor-tye { /*----------↓↓ TECNICAS Y ESTILOS ↓↓----------*/
+
+/*----------↓↓ TECNICAS Y ESTILOS ↓↓----------*/
+.contenedor-tye { 
     flex-wrap: wrap;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-
     .cont-img-tye {
         @include mixins.flex(null, flex-start, center);
         object-fit: cover;
@@ -15,7 +16,6 @@
         padding: 10px;
         margin: 20px;
         width: 900px;
-
         .imgs-tec-esti {
             @include mixins.width-height(230px, 230px);
             object-fit: cover;
@@ -35,16 +35,17 @@
             width: 0 auto;
             height: 0 auto;
         }
-
     } 
-} /*----------↑↑ TECNICAS Y ESTILOS ↑↑----------*/
+} 
+/*----------↑↑ TECNICAS Y ESTILOS ↑↑----------*/
 
 
-.content-principal-servicios { /*-----------↓↓ SERVICIOS ↓↓----------*/
+
+/*-----------↓↓ SERVICIOS ↓↓----------*/
+.content-principal-servicios { 
     @include mixins.flex(row, center, null);
     gap: 100px;
     margin-bottom: 30px;
-
     .content-uñas-rojas {
         @include mixins.flex(column, null, center);
         border: 6px solid #4A1C2C;
@@ -52,7 +53,7 @@
         @include mixins.width-height(800px, null);
         padding: 10px;
         text-align: center;
-         &:hover {
+        &:hover {
             transform: scale(1.01);  /* agranda al pasar el puntero */
             transition: 0.3s;
             background-image: linear-gradient(to bottom, #F7F0EB, #fae7f0);
@@ -62,30 +63,28 @@
             border-radius: 30px;
         }  
     }
-        .content-pies {
-            @include mixins.flex(column, null, center);
-            border: 6px solid #4A1C2C;
-            border-radius: 30px;
-            @include mixins.width-height(800px, null);
-            padding: 10px;
-            text-align: center;
-             &:hover {
-                transform: scale(1.01);  /* agranda al pasar el puntero */
-                transition: 0.3s;
-                background-image: linear-gradient(to bottom, #F7F0EB, #fae7f0);
-            }
-            .img-servicios-pies {
-                @include mixins.width-height(750px, 460px);
-                border-radius: 30px;
-            } 
+    .content-pies {
+        @include mixins.flex(column, null, center);
+        border: 6px solid #4A1C2C;
+        border-radius: 30px;
+        @include mixins.width-height(800px, null);
+        padding: 10px;
+        text-align: center;
+        &:hover {
+            transform: scale(1.01);  /* agranda al pasar el puntero */
+            transition: 0.3s;
+            background-image: linear-gradient(to bottom, #F7F0EB, #fae7f0);
         }
-
+        .img-servicios-pies {
+            @include mixins.width-height(750px, 460px);
+            border-radius: 30px;
+        } 
+    }
 }  
 .incluye-servicios{
     @include mixins.flex(column, null, center);
     gap: 10px;
     margin: 10px;
-   
     .bloque-servicios{
         @include mixins.flex(column, center, center);   
         text-align: center;
@@ -108,64 +107,63 @@
   
 
 
-.contenedor-nt {   /*----------↓↓ NUESTROS TRABAJOS ↓↓----------*/
+/*----------↓↓ NUESTROS TRABAJOS ↓↓----------*/
+.contenedor-nt {   
     @include mixins.flex(row,space-between, null);
     margin-bottom: 10px;
-        .contenedor-principal-imgs { 
-            display: grid;
-            grid-template-columns: 350px 300px 300px;
-            grid-template-rows: 300px 300px;
-            grid-template-areas: 
-                "img-grande1 img-chica1 img-chica2"
-                "img-grande1 img-chica3 img-chica4";
-            gap: 10px;
-            padding: 5px;
-            margin: 19px;
-            border: 5px solid #6C043C;
-            border-radius: 30px;
-            &:hover {
-                transition: 0.3s;
-                background-color: #f1d8c6;
-            }
-            .img-chica1 {
-                grid-area: img-chica1;
-            }
-            .img-chica2 {
-                grid-area: img-chica2;
-            }
-            .img-chica3 {
-                grid-area: img-chica3;
-            }
-            .img-chica4 {
-                grid-area: img-chica4;
-            }
-            .img-grande1 {
-                grid-area: img-grande1;
-            }    
-            .imagenes-chicas3, .imagenes-chicas2, .imagenes-chicas1, .imagenes-chicas4 {
-                @include mixins.img-style(0.2s, 100%, 100%, cover, 30px);
-                
-                &:hover {
-                    transform: scale(1.06);  /* agranda al pasar el puntero */
-                    transition: 0.5s;
-                }
-                &:active {
-                    transform: scale(0.95); /*achica al click */
-                }
-            }
-            .imagen-grande {
-                @include mixins.img-style(0.2s, 100%, 100%, cover, 30px);
-                  &:hover {
-                    transform: scale(1.04);
-                    transition: 0.5s;
-                }
-                &:active {
-                    transform: scale(0.95); 
-                }
-            }
-            
+    .contenedor-principal-imgs { 
+        display: grid;
+        grid-template-columns: 350px 300px 300px;
+        grid-template-rows: 300px 300px;
+        grid-template-areas: 
+            "img-grande1 img-chica1 img-chica2"
+            "img-grande1 img-chica3 img-chica4";
+        gap: 10px;
+        padding: 5px;
+        margin: 19px;
+        border: 5px solid #6C043C;
+        border-radius: 30px;
+        &:hover {
+            transition: 0.3s;
+            background-color: #f1d8c6;
         }
-
-} /*----------↑↑ NUESTROS TRABAJOS ↑↑----------*/
+        .img-chica1 {
+            grid-area: img-chica1;
+        }
+        .img-chica2 {
+            grid-area: img-chica2;
+        }
+        .img-chica3 {
+            grid-area: img-chica3;
+        }
+        .img-chica4 {
+            grid-area: img-chica4;
+        }
+        .img-grande1 {
+            grid-area: img-grande1;
+        }    
+        .imagenes-chicas3, .imagenes-chicas2, .imagenes-chicas1, .imagenes-chicas4 {
+            @include mixins.img-style(0.2s, 100%, 100%, cover, 30px);
+            &:hover {
+                transform: scale(1.06);  /* agranda al pasar el puntero */
+                transition: 0.5s;
+            }
+            &:active {
+                transform: scale(0.95); /*achica al click */
+            }
+        }
+        .imagen-grande {
+            @include mixins.img-style(0.2s, 100%, 100%, cover, 30px);
+            &:hover {
+                transform: scale(1.04);
+                transition: 0.5s;
+            }
+            &:active {
+                transform: scale(0.95); 
+            }
+        }
+    }
+} 
+/*----------↑↑ NUESTROS TRABAJOS ↑↑----------*/
 
 
