--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,8 @@ nav ul {
   gap: 5px;
 }
 
-.texto-tecnicas { /*----------↓↓ NUESTROS TRABAJOS ↓↓----------*/
+/*----------↓↓ NUESTROS TRABAJOS ↓↓----------*/
+.texto-tecnicas {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -106,9 +107,9 @@ nav ul {
 }
 .guia-tecnica .ul-tecnica {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   padding-left: 0;
   margin-left: 0;
   gap: 8px;
@@ -125,7 +126,8 @@ nav ul {
 }
 
 /*----------↑↑ NUESTROS TRABAJOS ↑↑----------*/
-.contenedor-tye { /*----------↓↓ TECNICAS Y ESTILOS ↓↓----------*/
+/*----------↓↓ TECNICAS Y ESTILOS ↓↓----------*/
+.contenedor-tye {
   flex-wrap: wrap;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -170,7 +172,8 @@ nav ul {
 }
 
 /*----------↑↑ TECNICAS Y ESTILOS ↑↑----------*/
-.content-principal-servicios { /*-----------↓↓ SERVICIOS ↓↓----------*/
+/*-----------↓↓ SERVICIOS ↓↓----------*/
+.content-principal-servicios {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -253,7 +256,8 @@ nav ul {
 }
 
 /*-----------↑↑ SERVICIOS ↑↑----------*/
-.contenedor-nt { /*----------↓↓ NUESTROS TRABAJOS ↓↓----------*/
+/*----------↓↓ NUESTROS TRABAJOS ↓↓----------*/
+.contenedor-nt {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -323,9 +327,9 @@ footer { /*----------↓↓ FOOTER ↓↓----------*/
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #B690A1;
   width: 100%;
   max-width: 1000px;
+  background-color: #B690A1;
   margin: 0 auto;
   border-radius: 20px;
   border: solid 3px #6C043C;
@@ -363,6 +367,7 @@ footer .container-img-footer .imgs-footer:hover {
 }
 
 /*-----------↑↑ FOOTER ↑↑----------*/
+/*----------↓↓ INICIO ↓↓ ----------*/
 @keyframes efect-disco {
   0% {
     transform: rotateZ(0deg);
@@ -371,7 +376,7 @@ footer .container-img-footer .imgs-footer:hover {
     transform: rotateZ(360deg);
   }
 }
-.content-inicio { /*----------↓↓ INICIO ↓↓ ----------*/
+.content-inicio {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -404,15 +409,16 @@ footer .container-img-footer .imgs-footer:hover {
 .content-inicio .title-paragraph-inicio {
   display: flex;
   flex-direction: column;
-  padding-left: 30px;
   width: 100%;
   max-width: 1100px;
+  padding-left: 30px;
   text-align: start;
   gap: 10px;
 }
 
 /*----------↑↑ INICIO ↑↑----------*/
-.h2-formulario { /*---------- ↓↓ FORMULARIO ↓↓ ----------*/
+/*---------- ↓↓ FORMULARIO ↓↓ ----------*/
+.h2-formulario {
   text-align: center;
 }
 
@@ -487,10 +493,11 @@ footer .container-img-footer .imgs-footer:hover {
 }
 
 .mapa {
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
   border: 5px solid #6C043C;
   padding: 5px;
-  width: 1000px;
-  height: 100%;
   max-height: 900px;
   border-radius: 30px;
 }
@@ -562,7 +569,8 @@ p {
   p {
     font-size: 20px;
   }
-  main { /*----- ↓↓ HOME ↓↓ -----*/
+  /*----- ↓↓ HOME ↓↓ -----*/
+  main {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -594,7 +602,8 @@ p {
     margin: 5px 0 5px 0;
   }
   /*----- ↑↑ HOME ↑↑ -----*/
-  .contenedor-tye { /*----- ↓↓ TECNICAS Y ESTILOS ↓↓ -----*/
+  /*----- ↓↓ TECNICAS Y ESTILOS ↓↓ -----*/
+  .contenedor-tye {
     display: grid;
     grid-template-columns: 95%;
     justify-content: center;
@@ -615,7 +624,8 @@ p {
     text-align: center;
   }
   /*----- ↑↑ TECNICAS Y ESTILOS ↑↑ -----*/
-  .content-principal-servicios { /*----- ↓↓ SERVICIOS ↓↓ -----*/
+  /*----- ↓↓ SERVICIOS ↓↓ -----*/
+  .content-principal-servicios {
     flex-direction: column;
     padding: 10px;
     gap: 30px;
@@ -645,7 +655,8 @@ p {
     font-size: 20px;
   }
   /*----- ↑↑ SERVICIOS ↑↑ -----*/
-  .contenedor-nt { /*------ ↓↓ NUESTROS TRABAJOS ↓↓ -----*/
+  /*------ ↓↓ NUESTROS TRABAJOS ↓↓ -----*/
+  .contenedor-nt {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -753,7 +764,8 @@ p {
   h1 {
     font-size: 40px;
   }
-  main { /*----- ↓↓ HOME ↓↓ -----*/
+  /*----- ↓↓ HOME ↓↓ -----*/
+  main {
     display: flex;
     flex-direction: column;
     place-items: center;
@@ -785,7 +797,8 @@ p {
     border: 4px solid #6C043C;
   }
   /*----- ↑↑ HOME ↑↑ -----*/
-  .contenedor-tye { /*----- ↓↓ TECNICAS Y ESTILOS ↓↓ -----*/
+  /*----- ↓↓ TECNICAS Y ESTILOS ↓↓ -----*/
+  .contenedor-tye {
     display: grid;
     grid-template-columns: 1fr;
     align-content: center;
@@ -805,7 +818,8 @@ p {
     text-align: center;
   }
   /*----- ↑↑ TECNICAS Y ESTILOS ↑↑ -----*/
-  .content-principal-servicios { /*----- ↓↓ SERVICIOS ↓↓ -----*/
+  /*----- ↓↓ SERVICIOS ↓↓ -----*/
+  .content-principal-servicios {
     flex-direction: column;
     padding: 10px;
     gap: 30px;
@@ -834,7 +848,8 @@ p {
     font-size: 20px;
   }
   /*----- ↑↑ SERVICIOS ↑↑ -----*/
-  .contenedor-nt { /*------ ↓↓ NUESTROS TRABAJOS ↓↓ -----*/
+  /*------ ↓↓ NUESTROS TRABAJOS ↓↓ -----*/
+  .contenedor-nt {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1196,10 +1211,10 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    text-align: center;
     width: 100%;
     height: auto;
+    margin: 0 auto;
+    text-align: center;
     font-size: 25px;
     gap: 10px;
   }
@@ -1210,10 +1225,9 @@ p {
     font-size: 23px;
   }
   .contenedor-nt .contenedor-principal-imgs {
-    margin: 0 auto;
-    justify-content: center;
     width: 100%;
     max-width: 670px;
+    margin: 0 auto;
     grid-template-columns: 230px 200px 200px;
     grid-template-rows: 250px 250px;
     margin-top: 0;
@@ -1313,6 +1327,10 @@ p {
     max-width: 250px;
     height: 280px;
   }
+  .contenedor-tye .cont-img-tye .imgs-tye-pies {
+    height: 280px;
+    max-width: 250px;
+  }
   .contenedor-tye .cont-img-tye .ol-tye {
     margin: 0 auto;
     font-size: 20px;
@@ -1373,7 +1391,6 @@ p {
   }
   .contenedor-nt .contenedor-principal-imgs {
     margin: 0 auto;
-    justify-content: center;
     width: 760px;
     grid-template-columns: 260px 230px 230px;
     grid-template-rows: 280px 280px;
@@ -1488,6 +1505,7 @@ p {
   }
   .contenedor-tye .cont-img-tye .imgs-tye-pies {
     height: 300px;
+    max-width: 290px;
   }
   .contenedor-tye .cont-img-tye .ol-tye {
     font-size: 20px;
